# db_to_excel

./: .gitignore  README.md  config.cfg  excel_output.py  pyproject.toml  requirements.yml
spreadsheets/: master_tracker.xlsx  timeless_tracker.xlsx  user_tracker.xlsx
src/: AutomaticEmail.py  EmailClient.py  HorosDBExtract.py  UserExtract.py  extract.py
src/excel_output/: AutomaticEmail.py  EmailClient.py  HorosDBExtract.py  UserExtract.py  cli.py  user.py
tests/: test_script.py
