[tool.poetry]
name = "db-excel"
version = "0.1.0"
description = ""
authors = ["Ryan Apfel <rasapfel@gmail.com>"]
readme = "README.md"
packages = [{include = "excel_output", from = "src"}]



[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.2"
click = "^8.1.7"
xlsxwriter = "^3.2.0"
boto3 = "^1.34.136"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
excel_output = "excel_output.cli:cli"